force-app/main/default/objects/Broker_Relation__c/Broker_Relation__c.object-meta.xml
<CustomObject>
    <description>Facilitates RBMs &amp; Enablement Mangers to establish and manage relationship between RBMs &amp; and their brokers.</description>
    <label>Broker Relation</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Broker Relations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>