force-app/main/default/objects/Broker_Relation__c/fields/Address2__c.field-meta.xml
<CustomField>
    <fullName>Address2__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non-Sensitive Personal Information;Source_Salesforce</complianceGroup>
    <description>To capture the address related to Office Group</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Address2</label>
    <type>TextArea</type>
</CustomField>