force-app/main/default/objects/Broker_Relation__c/fields/Aggregator__c.field-meta.xml
<CustomField>
    <fullName>Aggregator__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Aggregator to which this Broker Set would be associated with.
Requirement: Ensure it&apos;s an Account of record type Organization.</description>
    <label>Aggregator</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Aggregator must be an Organization account.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Organisation</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Broker Relations</relationshipLabel>
    <relationshipName>Broker_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>