force-app/main/default/objects/Broker_Relation__c/fields/Associated_Broker_Set__c.field-meta.xml
<CustomField>
    <fullName>Associated_Broker_Set__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Represents the association between the office group and Broker set.</description>
    <label>Associated Broker Set</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR 3 OR 4) AND 5</booleanFilter>
        <errorMessage>Only an Office Group can be associated to a Broker Set.</errorMessage>
        <filterItems>
            <field>Broker_Relation__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Broker Set</value>
        </filterItems>
        <filterItems>
            <field>Broker_Relation__c.Primary_RBM__c</field>
            <operation>equals</operation>
            <valueField>$User.Id</valueField>
        </filterItems>
        <filterItems>
            <field>Broker_Relation__c.Secondary_RBM__c</field>
            <operation>equals</operation>
            <valueField>$User.Id</valueField>
        </filterItems>
        <filterItems>
            <field>$UserRole.DeveloperName</field>
            <operation>equals</operation>
            <value>Broker_Enablement_Manager</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Office Group</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Broker_Relation__c</referenceTo>
    <relationshipLabel>Office Groups</relationshipLabel>
    <relationshipName>Office_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>