force-app/main/default/objects/Broker_Relation__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source_Salesforce</complianceGroup>
    <description>External Id</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External_Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>