force-app/main/default/objects/Broker_Relation__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source_Salesforce</complianceGroup>
    <defaultValue>true</defaultValue>
    <description>To capture whether the Broker Set / Office Group is active or not.</description>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>