force-app/main/default/objects/Broker_Relation__c/fields/Secondary_RBM__c.field-meta.xml
<CustomField>
    <fullName>Secondary_RBM__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Secondary RBM who would be managing this Broker Set.
Requirements: Only allowed on a Broker Set. Role should be RBM.</description>
    <label>Secondary RBM</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Broker Set</value>
        </filterItems>
        <filterItems>
            <field>User.UserRole.DeveloperName</field>
            <operation>equals</operation>
            <value>Residential_Broker_Manager</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Secondary_Broker_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>