force-app/main/default/objects/Broker_Relation__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source_Salesforce</complianceGroup>
    <description>Signifies the type of segment this Broker Set is related.</description>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APN</fullName>
                <label>APN (Advocate, Prospect, Nurture)</label>
            </value>
            <value>
                <fullName>TD</fullName>
                <label>TD (Transactional, Disengaged)</label>
            </value>
            <value>
                <fullName>Advocate</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Nurture</fullName>
            </value>
            <value>
                <fullName>Transactional</fullName>
            </value>
            <value>
                <fullName>Disengaged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>