force-app/main/default/objects/Broker_Relation__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source_Salesforce</complianceGroup>
    <description>Represents the state to which this Broker Set is Associated.
SAO = Sub-Aggregator Originator</description>
    <label>SAO State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NSW/ACT</fullName>
            </value>
            <value>
                <fullName>QLD/NT</fullName>
            </value>
            <value>
                <fullName>VIC/TAS</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>WA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>