force-app/main/default/objects/Broker_Relation__c/recordTypes/Broker_Set.recordType-meta.xml
<RecordType>
    <fullName>Broker_Set</fullName>
    <active>true</active>
    <label>Broker Set</label>
</RecordType>