force-app/main/default/objects/Broker_Relation__c/recordTypes/Office_Group.recordType-meta.xml
<RecordType>
    <fullName>Office_Group</fullName>
    <active>true</active>
    <label>Office Group</label>
</RecordType>