force-app/main/default/objects/Broker_Relation__c/validationRules/OfficeGroup_Agg_Mismatch_From_BrokerSet.validationRule-meta.xml
<ValidationRule>
    <fullName>OfficeGroup_Agg_Mismatch_From_BrokerSet</fullName>
    <active>true</active>
    <description>Prevent selection of a different aggregator on Office Group than its Broker Set.</description>
    <errorConditionFormula>AND(
  RecordType.DeveloperName == &apos;Office_Group&apos;,
  Aggregator__c !=  Associated_Broker_Set__r.Aggregator__c 
)</errorConditionFormula>
    <errorDisplayField>Aggregator__c</errorDisplayField>
    <errorMessage>The selected aggregator doesn&apos;t match the Assigned Broker Set.</errorMessage>
</ValidationRule>