force-app/main/default/objects/Broker_Relation__c/validationRules/Prevent_BPA_with_upsert_Office_Group.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_BPA_with_upsert_Office_Group</fullName>
    <active>true</active>
    <description>Restricting Broker Profile Admin users to create/edit broker set with record type as Office Group</description>
    <errorConditionFormula>AND($Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,NOT(ISBLANK($UserRole.DeveloperName)), $UserRole.DeveloperName = &quot;Broker_Profile_Admin&quot;, RecordType.DeveloperName = &quot;Office_Group&quot; )</errorConditionFormula>
    <errorMessage>Broker Profile Admin cannot create or edit Office Group</errorMessage>
</ValidationRule>