force-app/main/default/objects/Broker_Relation__c/validationRules/Prevent_RBM_Update_Others_OfficeGroup.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_RBM_Update_Others_OfficeGroup</fullName>
    <active>true</active>
    <description>Prevent RBMs from updating Office Groups not assigned to them.</description>
    <errorConditionFormula>AND(
  RecordType.DeveloperName == &apos;Office_Group&apos;, 
  $UserRole.DeveloperName == &apos;Residential_Broker_Manager&apos;,
  Is_MyOfficeGroup__c == false
)</errorConditionFormula>
    <errorMessage>You can only create or update Office Groups for Broker Sets assigned to you.</errorMessage>
</ValidationRule>