force-app/main/default/objects/Broker_Relation__c/validationRules/Required_Fields_Missing_For_Broker_Set.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Fields_Missing_For_Broker_Set</fullName>
    <active>true</active>
    <description>Enforce required fields for Broker Sets.</description>
    <errorConditionFormula>AND(
  $Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
  RecordType.DeveloperName == &apos;Broker_Set&apos;,
  OR(
    AND (ISBLANK(Primary_RBM__c), IsActive__c),
    ISBLANK(TEXT(State__c)),
    ISBLANK(TEXT(Segment__c)),
    ISBLANK(Aggregator__c)
  )
)</errorConditionFormula>
    <errorMessage>Provide all required values for a Broker Set.</errorMessage>
</ValidationRule>