force-app/main/default/objects/Broker_Relation__c/validationRules/Required_Fields_Missing_For_Office_Group.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Fields_Missing_For_Office_Group</fullName>
    <active>true</active>
    <description>Enforce required fields for Office Groups.</description>
    <errorConditionFormula>AND(
  RecordType.DeveloperName == &apos;Office_Group&apos;,
  OR (
    ISBLANK(Associated_Broker_Set__c),
    ISBLANK(Address1__c),
    ISBLANK(TEXT(Segment__c)),
    ISBLANK(Aggregator__c)
  )
)</errorConditionFormula>
    <errorMessage>Provide all required values for an Office Group.</errorMessage>
</ValidationRule>