force-app/main/default/objects/Broker_Relation__c/listViews/All_Broker_Sets.listView-meta.xml
<ListView>
    <fullName>All_Broker_Sets</fullName>
    <columns>NAME</columns>
    <columns>Segment__c</columns>
    <columns>Primary_RBM__c</columns>
    <columns>State__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Broker_Relation__c.Broker_Set</value>
    </filters>
    <label>All Broker Sets</label>
    <sharedTo>
        <role>Enablement_Manager</role>
    </sharedTo>
</ListView>