force-app/main/default/objects/Broker_Relation__c/listViews/Inactive_Broker_Set.listView-meta.xml
<ListView>
    <fullName>Inactive_Broker_Set</fullName>
    <columns>NAME</columns>
    <columns>Segment__c</columns>
    <columns>Primary_RBM__c</columns>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Broker_Relation__c.Broker_Set</value>
    </filters>
    <filterScope>Everything</filterScope>
    <label>Inactive Broker Set</label>
    <sharedTo>
        <role>Broker_Enablement_Manager</role>
    </sharedTo>
</ListView>