force-app/main/default/objects/Broker_Relation__c/listViews/Inactive_Office_Groups.listView-meta.xml
<ListView>
    <fullName>Inactive_Office_Groups</fullName>
    <columns>NAME</columns>
    <columns>Associated_Broker_Set__c</columns>
    <columns>Aggregator__c</columns>
    <columns>Segment__c</columns>
    <columns>Address1__c</columns>
    <columns>IsActive__c</columns>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Broker_Relation__c.Office_Group</value>
    </filters>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Is_MyOfficeGroup__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filterScope>Everything</filterScope>
    <label>Inactive Office Groups</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Enablement_Manager</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Residential_Broker_Manager</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>