force-app/main/default/objects/Broker_Relation__c/listViews/My_Office_Groups.listView-meta.xml
<ListView>
    <fullName>My_Office_Groups</fullName>
    <columns>NAME</columns>
    <columns>Associated_Broker_Set__c</columns>
    <columns>Aggregator__c</columns>
    <columns>Segment__c</columns>
    <columns>Address1__c</columns>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Broker_Relation__c.Office_Group</value>
    </filters>
    <filters>
        <field>Is_MyOfficeGroup__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filterScope>Everything</filterScope>
    <label>My Office Groups</label>
    <sharedTo>
        <role>Broker_Enablement_Manager</role>
        <role>Residential_Broker_Manager</role>
    </sharedTo>
</ListView>